Create animation for clicked element and create method handler for navigation

--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,8 @@
 .slide-animation {
   animation: Slide .5s ease-in-out forwards;
 }
+
+/* Clicked element */
+.clicked:active {
+  transform: scale(.65);
+}
